assets/css/styles.css
/* Table of Contents
   -----------------
   Temporary Styles
   Utilities
   Typography
   Decoration
   STRUCTURE
    - Main Header & Navigation
    - Hero Section
    - Your Job
    - Our Job
    - Let's Go
    - Footer
    MEDIA QUERIES
    - Phone (Portrait)
    - Phone (Landscape)
    - Tablet (Portrait)
   -----------------
 */


/* --- Temporary Styles (while building layout) --- */
section,
aside {
    outline: 2px solid black;
}
img {
    max-width: 100%;
}

/* --------------------------------------------- */




/* Utilities */
html, * {
    scroll-behavior: smooth!important;
}

.overlay {
    background-color: rgba(0, 0, 0, 0.4);
}


/* Typography */
h3 {
    text-align: center;
}


/* Decoration */
section h3 {
    border-bottom: 2px solid;
}


/* STRUCTURE */
.flex-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    box-sizing: border-box;
    width: 100%;
}

.control-width {
    max-width: 1700px;
    margin: 0 auto;
}

section > h3 {
    max-width: 5em;
    margin: 0 auto 1em;
}

.custom-ul {
    margin: 0;
    padding: 0;
}

.custom-ul li {
    list-style: none;
    margin: .25em auto;
}


/* Main Header & Navigation */
#main-header {
    background: #fff;
}

#logo {
    display: flex;
}

nav {
    width: auto;
}

#main-menu {
    margin: 15px 0;
    padding: 0;
    justify-content: space-around;
    flex-direction: row;
}

#main-menu li {
    list-style: none;
    margin: 0 1em;
}

#main-menu a {
    text-decoration: none;
}



/* Hero Section */
#hero {
    background: #cfcfcf;
    position: relative;
    height: 600px;
}

aside {
    position: absolute;
    top: 50%;
    right: 2%;
    bottom: 50%;
    left: auto;
    text-align: center;
    width: 15%;
    height: 45%;
    margin: auto;
}


/* Your Job */
#your-job ul {
    column-count: 2;
}

#your-job li {
    width: 33%;
    text-align: left;
}

#your-job li:first-of-type {
    margin-top: 0;
}


/* Our Job */
.card-container {
    justify-content: space-evenly;
}

.card {
    position: relative;
    border: 2px solid;
    background: #cfcfcf;
    text-align: center;
    margin-top: 2em;
    margin-bottom: 2em;
    min-height: 300px;
    padding: 1em;
    width: 33%;
    flex-direction: column;
}

.card h3,
.card .overlay,
.card button {
    width: 90%;
}

.card h3 {
    border: 2px solid;
    margin: 0;
    margin-top: -1.6em;
}

.card .overlay {
    min-height: 250px;
    margin: 1em auto;
    justify-content: center;
    flex-direction: column;
}

.card h4 {
    margin-bottom: 0;
}

.card .overlay-content p {
    margin: 0.3em 0 0;
}


/* Let's Go */
form {
    margin: 1.6em auto 0;
    width: 90%;
}

.label-input-container {
    width: 49%;
}

label,
input {
    display: block;
    width: 100%;
}

label:not(:first-of-type) {
    margin-top: 1em;
}

.required {
    font-size: 0.8rem;
}

form button {
    display: block;
    margin: 1em 0;
}


/* Footer */
footer {
    padding: 1em;
}

footer .flex-container {
    margin-top: 1em;
    justify-content: center;
}

footer > .flex-container {
    width: 33%;
    margin-top: 0;
}

#social-media,
#social-media ul {
    display: flex;
    flex-direction: row;
}

#social-media {
    margin: 0 5px;
    justify-content: flex-start;
}

#social-media li {
    margin: 0 0.5em;
}

#copyright {
    justify-content: flex-end;
}


/* MEDIA QUERIES */

/* Phone (Portrait) */
@media (max-width: 413.98px) and (orientation: portrait) {
    .flex-container {
        flex-direction: column;
    }

    aside {
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
    }

    #your-job ul {
        column-count: unset;
    }

    #your-job li {
        width: 66%;
    }

    .card {
        width: 90%;
    }

    .label-input-container {
        width: 100%;
    }

    footer > .flex-container {
        width: 100%;
    }

    #back-to-top {
        order: -1;
    }

    #social-media,
    #copyright {
        justify-content: center;
    }


}

/* Phone (Landscape) */
@media (max-width: 844.98px) and (orientation: landscape) {

    #hero {
        max-height: 150px;
    }

    aside {
        width: 33%;
        height: 130px;
    }

    #your-job li {
        min-width: 60%;
    }

    .card,
    .label-input-container {
        width: 45%;
    }

    form {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
    }

    form > .required,
    form button {
        display: block;
    }

    form > .required {
        width: 100%;
    }

    footer > .flex-container {
        width: 30%;
    }


}


/* Tablet (Portrait) */
@media (max-width: 833.98px) and (orientation: portrait) {
    #hero {
        height: 340px;
    }

    aside {
        height: 66%;
        width: 30%;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }
}

